[metadata]
name = hashback
author = Philip Couling
author_email = couling@gmail.com
url = https://github.com/couling/BackupServer
description = Backup server and client which indexes files and directories by sha256sum to save space.
long_description = file: README.md, LICENCE.md
long_description_content_type = text/markdown
platform = any
license = MIT
classifiers =
    Licence :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
include_package_data = False
package_dir =
    =source
packages: find:
python_requires >= 3.8
install_requires =
    pydantic
    click
    python-dateutil
    python-multipart
    asyncstdlib
    aiofiles
    requests
    fastapi
    uvicorn
setup_requires=
    wheel

[options.packages.find]
where = source
exclude = tests

[options.entry_points]
console_scripts =
    hashback = hashback:main
    hashback-db-admin = hashback.db_admin:main
    hashback-server = hashback.server.main:main

[options.extras_require]
tests =
    fastapi
    pytest
    pytest-cov
    pylint == 2.9.6
server =
    fastapi
    uvicorn
