[metadata]
name = hashback
author = Philip Couling
author_email = couling@gmail.com
url = https://github.com/couling/BackupServer
description = Backup server and client which indexes files and directories by sha256sum to save space.
long_description = file: README.md, LICENCE.md
long_description_content_type = text/markdown
platform = any
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
include_package_data = False
package_dir =
    =source
packages: find:
python_requires >= 3.8
install_requires =
    pydantic
    click
    appdirs
    python-dateutil
    requests


[options.packages.find]
where = source
exclude =
    tests*

[options.entry_points]
console_scripts =
    hashback = hashback.cmdline:main
    hashback-db-admin = hashback.db_admin.db_admin:main
    hashback-basic-server = hashback.basic_auth.server:main [server]

[options.extras_require]
tests =
    fastapi
    uvicorn
    python-multipart
    asyncstdlib
    pytest
    pytest-asyncio
server =
    python-multipart
    fastapi
    uvicorn
    asyncstdlib

[pylint.MASTER]
extension-pkg-whitelist=pydantic

[pylint.'MESSAGES CONTROL']
disable=missing-module-docstring,
        missing-class-docstring,
        missing-function-docstring,
        too-few-public-methods,
        logging-fstring-interpolation,


[pylint.FORMAT]
max-line-length=120

[pylint.BASIC]
good-names=ex,
    i,
    j,
    x,
    y,
    fd,
